--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,18 +2,15 @@
 -r requirements.txt
 
 # Testing
-pytest==7.4.4
-pytest-cov==4.1.0
-pytest-mock==3.12.0
+pytest>=7.4.0
+pytest-cov>=4.1.0
+pytest-mock>=3.12.0
 
 # Linting and formatting
-flake8==7.0.0
-black==24.1.0
-isort==5.13.2
-mypy==1.8.0
-
-# Type stubs
-types-python-dateutil==2.8.19.20240106
+flake8>=7.0.0
+black>=24.1.0
+isort>=5.13.0
+mypy>=1.8.0
 
 # Pre-commit hooks
-pre-commit==3.6.0
+pre-commit>=3.6.0
