--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,11 @@
 apache-beam[gcp]==2.52.0
 
 # Google Cloud libraries
-google-cloud-bigquery==3.14.1
-google-cloud-storage==2.14.0
-
-# Data processing
-pandas==2.1.4
-pyarrow==14.0.2
+google-cloud-bigquery>=3.14.0
+google-cloud-storage>=2.14.0
 
 # Configuration
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
 
 # Logging
-google-cloud-logging==3.9.0
+google-cloud-logging>=3.9.0
